@@ -1,3 +1,8 @@
+2007-02-26  Rodney Dawes  <dobey@novell.com>
+
+	* python/A11yTestUtils.py (a11y_test_init): Add another argument to
+	the method to allow specifying a different logfile name
+
 2007-02-21  Rodney Dawes  <dobey@novell.com>
 
 	* scripts/yelp.py: Document how the script works, to aid people in
